Reorganization payload extraction tests

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -95,7 +95,7 @@ Metrics/BlockLength:
   Exclude:
     - 'Rakefile'
     - '**/*.rake'
-    - 'spec/*.rb'
+    - 'spec/**/*.rb'
     - '**/*.gemspec'
 
 Metrics/ClassLength:
